--- a/KLDownloadManage/KLDownloadViewController.xib
+++ b/KLDownloadManage/KLDownloadViewController.xib
@@ -7,6 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="KLDownloadViewController">
             <connections>
+                <outlet property="tableview" destination="czd-Dw-ceJ" id="QNg-IQ-JXY"/>
                 <outlet property="view" destination="1" id="3"/>
             </connections>
         </placeholder>
